RESOLVED FIXED 276206
Typing into Facebook post autocompletes too much
https://bugs.webkit.org/show_bug.cgi?id=276206
Summary Typing into Facebook post autocompletes too much
Richard Robinson
Reported 2024-07-03 15:18:50 PDT
Attachments
Richard Robinson
Comment 1 2024-07-03 15:26:43 PDT
EWS
Comment 2 2024-07-17 12:12:14 PDT
Committed 281060@main (09f5cc358811): <https://commits.webkit.org/281060@main> Reviewed commits have been landed. Closing PR #30468 and removing active labels.
EWS
Comment 3 2024-07-19 08:46:35 PDT
Committed 280938.65@integration/ci/129435650_09f5cc3588_safari-7619-branch (aa400f39fb37): <https://commits.webkit.org/280938.65@integration/ci/129435650_09f5cc3588_safari-7619-branch> Reviewed commits have been landed. Closing PR #1421 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.