Typing into Facebook post autocompletes too much https://bugs.webkit.org/show_bug.cgi?id=276206 rdar://129435650

Reviewed by Wenson Hsieh.

Use the new pseudo-style-based writing suggestions implementation on both iOS and macOS, instead of just macOS,
and account for the differences in the behavior between how AppKit and UIKit interface with WebKit for providing
the predictive text.

* Source/WebCore/dom/WritingSuggestionData.h:
(WebCore::WritingSuggestionData::WritingSuggestionData):
(WebCore::WritingSuggestionData::originalPrefix const):
(WebCore::WritingSuggestionData::originalSuffix const):
* Source/WebCore/editing/Editor.cpp:
(WebCore::Editor::setWritingSuggestion):
(WebCore::Editor::respondToChangedSelection):
* Source/WebCore/rendering/updating/RenderTreeUpdaterGeneratedContent.cpp:
(WebCore::RenderTreeUpdater::GeneratedContent::updateWritingSuggestionsRenderer):
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView setAttributedMarkedText:selectedRange:]):

Canonical link: https://commits.webkit.org/281060@main